--- a/code/server_software/tonight_server/app/views/layouts/admin.html.erb
+++ b/code/server_software/tonight_server/app/views/layouts/admin.html.erb
@@ -3,11 +3,58 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Tonight Server | Admin Console</title>
+		    <!-- Core CSS - Include with every page -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+
+		<!-- Page-Level Plugin CSS - Dashboard -->
+		<link href="css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
+		<link href="css/plugins/timeline/timeline.css" rel="stylesheet">
+
+		<!-- SB Admin CSS - Include with every page -->
+		<link href="css/sb-admin.css" rel="stylesheet">
 	  	<%= csrf_meta_tags %>
 	</head>
 	<body>
 
-		<%= yield %>
+	<nav class="navbar navbar-default navbar-static-top" role="navigation">
+	    		<div class="nav-inner">
+		   		 <div class="navbar-header">
+			          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-6">
+			            <span class="sr-only">Toggle navigation</span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			          </button>
+			          <a class="navbar-brand" href="/">Tonight Server Console</a>
+			        </div>
+		   		 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-6">
+		    		<ul class="nav navbar-nav">
+					<li><a href="/">Home</a></li>
+				</ul>
+			</div>
+	    	</div>
+	  </nav>
+	  <div class="container">
+	  	
+	  	<%= yield %>
+
+	  </div>
+
+	<!-- Core Scripts - Include with every page -->
+	<script src="js/jquery-1.10.2.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+
+	<!-- Page-Level Plugin Scripts - Dashboard -->
+	<script src="js/plugins/morris/raphael-2.1.0.min.js"></script>
+	<script src="js/plugins/morris/morris.js"></script>
+
+	<!-- SB Admin Scripts - Include with every page -->
+	<script src="js/sb-admin.js"></script>
+
+	<!-- Page-Level Demo Scripts - Dashboard - Use for reference -->
+	<script src="js/demo/dashboard-demo.js"></script>
 
 	</body>
 </html>
