--- a/code/server_software/tonight_server/app/views/admin/static/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/static/index.html.erb
@@ -1,1 +1,8 @@
-Test content
+<div class="row">
+	<div class="col-sm-6">
+		<h1>Coloumn 1</h1>
+	</div>
+	<div class="col-sm-6">
+		<h1>Coloumn 2</h1>
+	</div>
+</div>
