--- a/code/server_software/tonight_server/app/views/layouts/admin.html.erb
+++ b/code/server_software/tonight_server/app/views/layouts/admin.html.erb
@@ -4,15 +4,15 @@
 		<meta charset="UTF-8">
 		<title>Tonight Server | Admin Console</title>
 		    <!-- Core CSS - Include with every page -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/font-awesome/css/font-awesome.css" rel="stylesheet">
 
 		<!-- Page-Level Plugin CSS - Dashboard -->
-		<link href="css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
-		<link href="css/plugins/timeline/timeline.css" rel="stylesheet">
+		<link href="/css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
+		<link href="/css/plugins/timeline/timeline.css" rel="stylesheet">
 
 		<!-- SB Admin CSS - Include with every page -->
-		<link href="css/sb-admin.css" rel="stylesheet">
+		<link href="/css/sb-admin.css" rel="stylesheet">
 	  	<%= csrf_meta_tags %>
 	</head>
 	<body>
@@ -42,19 +42,19 @@
 	  </div>
 
 	<!-- Core Scripts - Include with every page -->
-	<script src="js/jquery-1.10.2.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+	<script src="/js/jquery-1.10.2.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
 
 	<!-- Page-Level Plugin Scripts - Dashboard -->
-	<script src="js/plugins/morris/raphael-2.1.0.min.js"></script>
-	<script src="js/plugins/morris/morris.js"></script>
+	<script src="/js/plugins/morris/raphael-2.1.0.min.js"></script>
+	<script src="/js/plugins/morris/morris.js"></script>
 
 	<!-- SB Admin Scripts - Include with every page -->
-	<script src="js/sb-admin.js"></script>
+	<script src="/js/sb-admin.js"></script>
 
 	<!-- Page-Level Demo Scripts - Dashboard - Use for reference -->
-	<script src="js/demo/dashboard-demo.js"></script>
+	<script src="/js/demo/dashboard-demo.js"></script>
 
 	</body>
 </html>
