--- a/code/server_software/tonight_server/app/views/layouts/admin.html.erb
+++ b/code/server_software/tonight_server/app/views/layouts/admin.html.erb
@@ -31,6 +31,7 @@
 		   		 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-6">
 		    		<ul class="nav navbar-nav">
 					<li><a href="/">Home</a></li>
+					<li><a href="/jobs">Jobs</a></li>
 				</ul>
 			</div>
 	    	</div>
