--- a/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
@@ -6,6 +6,9 @@
 </div>
 <div class="row">
 	<div class="col-sm-12">
+		 <% flash.each do |name, msg| -%>
+			<%= content_tag :div, msg, class: name %>
+		<% end -%>
 		<div class="panel panel-default">
 			<div class="panel-heading">Current Jobs</div>
 			<div class="panel-body tabel-responsive">
@@ -23,13 +26,15 @@
 					</thead>
 					<tbody>
 						<% @jobs.each do |job| %>
-							<td><%= job.name %></td>
-							<td><%= job.desc %></td>
-							<td><%= job.api %></td>
-							<td><%= job.filters %></td>
-							<td><%= job.toe %></td>
-							<td><button type="button" class="btn btn-info btn-circle"><i class="fa fa-edit"></i></button></td>
-							<td><button type="button" class="btn btn-danger btn-circle"><i class="fa fa-remove"></i></button></td>
+							<tr>
+								<td><%= job.name %></td>
+								<td><%= job.desc %></td>
+								<td><%= job.api %></td>
+								<td><%= job.filters %></td>
+								<td><%= job.toe %></td>
+								<td><button type="button" class="btn btn-info btn-circle"><i class="fa fa-edit"></i></button></td>
+								<td><button type="button" class="btn btn-danger btn-circle"><i class="fa fa-remove"></i></button></td>
+							</tr>
 						<% end %>
 					</tbody>
 				</table>
