--- a/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
@@ -7,7 +7,10 @@
 <div class="row">
 	<div class="col-sm-12">
 		 <% flash.each do |name, msg| -%>
-			<%= content_tag :div, msg, class: name %>
+			<%= content_tag :div, msg , class: "alert alert-#{name} alert-dismissable" do %>
+				<%= msg %>
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+			<% end -%>
 		<% end -%>
 		<div class="panel panel-default">
 			<div class="panel-heading">Current Jobs</div>
@@ -33,7 +36,7 @@
 								<td><%= job.filters %></td>
 								<td><%= job.toe %></td>
 								<td><button type="button" class="btn btn-info btn-circle"><i class="fa fa-edit"></i></button></td>
-								<td><button type="button" class="btn btn-danger btn-circle"><i class="fa fa-remove"></i></button></td>
+								<td><button type="button" class="btn btn-danger btn-circle"><i class="fa fa-times"></i></button></td>
 							</tr>
 						<% end %>
 					</tbody>
@@ -64,13 +67,33 @@
 					</div>
 					<button type="submit" class="btn btn-default">Add Job</button>
 				<% end -%>
-					
-					
-					
 				</form>
 			</div>
 
 		</div>
 	</div>
-	<div class="col-sm-6"></div>
+	<div class="col-sm-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Completed Jobs
+				</div>
+				<div class="panel-body">
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Description</th>
+								<th>API</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+
+	</div>
 </div>
