--- a/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
@@ -36,7 +36,8 @@
 								<td><%= job.filters %></td>
 								<td><%= job.toe %></td>
 								<td><button type="button" class="btn btn-info btn-circle"><i class="fa fa-edit"></i></button></td>
-								<td><button type="button" class="btn btn-danger btn-circle"><i class="fa fa-times"></i></button></td>
+								<td><%= button_to 'X', {:controller => :jobs, :action => 'destroy', :id => job.id }, :method => :delete, :class => "btn btn-danger btn-circle" %>
+								</td>
 							</tr>
 						<% end %>
 					</tbody>
