--- a/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/jobs/index.html.erb
@@ -14,7 +14,7 @@
 		<% end -%>
 		<div class="panel panel-default">
 			<div class="panel-heading">Current Jobs</div>
-			<div class="panel-body tabel-responsive">
+			<div class="panel-body table-responsive">
 				<table class="table table-striped">
 					<thead>
 						<tr>
