Added in responsiveness!

--- a/code/server_software/tonight_server/app/views/admin/users/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/users/index.html.erb
@@ -10,7 +10,7 @@
 			<div class="panel-heading">
 				Registered Users
 			</div>
-			<div class="panel-body">
+			<div class="panel-body table-responsive">
 				<table class="table table-striped">
 					<thead>
 						<tr>
