--- a/code/server_software/tonight_server/app/views/layouts/admin.html.erb
+++ b/code/server_software/tonight_server/app/views/layouts/admin.html.erb
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Tonight Server | Admin Console</title>
 		    <!-- Core CSS - Include with every page -->
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -26,12 +27,12 @@
 			            <span class="icon-bar"></span>
 			            <span class="icon-bar"></span>
 			          </button>
-			          <a class="navbar-brand" href="/">Tonight Server Console</a>
+			          <a class="navbar-brand" href="/admin">Tonight Server Console</a>
 			        </div>
 		   		 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-6">
 		    		<ul class="nav navbar-nav">
-					<li><a href="/">Home</a></li>
-					<li><a href="/jobs">Jobs</a></li>
+					<li><a href="/admin/jobs">Jobs</a></li>
+					<li><a href="/admin/users">Users</a></li>
 				</ul>
 			</div>
 	    	</div>
