Added in the ability to start off a job and input details, added in the events and venues controller/models to see the inputted data.

--- a/code/server_software/tonight_server/app/views/layouts/admin.html.erb
+++ b/code/server_software/tonight_server/app/views/layouts/admin.html.erb
@@ -33,6 +33,8 @@
 		    		<ul class="nav navbar-nav">
 					<li><a href="/admin/jobs">Jobs</a></li>
 					<li><a href="/admin/users">Users</a></li>
+					<li><a href="/admin/venues">Venues</a></li>
+					<li><a href="/admin/events">Events</a></li>
 				</ul>
 			</div>
 	    	</div>
