--- a/code/server_software/tonight_server/app/views/admin/users/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/users/index.html.erb
@@ -54,7 +54,7 @@
 					<%= f.label :password  %><br />
 					<%= f.text_field :password,  :class => "form-control" %>
 					</div>
-					<button type="submit" class="btn btn-default">Add Job</button>
+					<button type="submit" class="btn btn-default">Add User</button>
 				<% end -%>
 				</form>
 			</div>
