Updated schema and code to allow for /cities/:id/events to work nicely

--- a/code/server_software/tonight_server/app/views/admin/venues/index.html.erb
+++ b/code/server_software/tonight_server/app/views/admin/venues/index.html.erb
@@ -26,7 +26,7 @@
 							<tr>
 								<td><%= venue.name %></td>
 								<td><%= venue.desc %></td>
-								<td><%= venue.city %></td>
+								<td><%= venue.city_id %></td>
 								<td><%= venue.phone %></td>
 								<td>link to events</td>
 							</tr>
